--- a/index.css
+++ b/index.css
@@ -3,29 +3,37 @@
 	padding: 0;
 	box-sizing:border-box;
 }
-body{
+.bigContainer{
 	width: 100%;
+	height: 100vh;
 	
-}
-.userProf{
-	
-	border: solid 1px black;
 }
 
+
 .box1{
+	border-bottom: solid black 1px;
 
 }
 .box2{
-
+border-bottom: solid black 1px;
 }
 .box3{
 
 }
 #user-container{
+	width: 30%;
 	border: solid 1px black;
 }
 #repo-container{
+	width: 50%;
 	
-	border: solid 1px black;
+	
+
+}
+.following{
+	display: inline-block;
+}
+img{
+	width: 100%;
 
 }
